# wesense-storage-broker

./: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: docker-build.yml
scripts/: backfill_attestation_hashes.py  create_missing_attestations.py
src/wesense_gateway/: app.py  config.py
src/wesense_gateway/api/: archive.py  data.py  readings.py  status.py
src/wesense_gateway/archive/: builder.py  manifest.py  scheduler.py  verifier.py
src/wesense_gateway/backends/: base.py  filesystem.py  iroh.py
src/wesense_gateway/models/: reading.py
src/wesense_gateway/pipeline/: processor.py
src/wesense_gateway/storage/: clickhouse.py
tests/: conftest.py  test_archive_builder.py  test_filesystem_backend.py  test_processor.py  test_readings_api.py
